[project]
name = "metrics-analytics"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.4.0",
  "pyarrow>=21",
  "typer>=0.17",
  "rich>=13",
  "pydantic>=2",
  "pandas>=2.3",
  "numpy>=2.3"
]

[project.optional-dependencies]
sheets = [
    "google-api-python-client",
    "google-auth-oauthlib"
]

[project.scripts]
metrics = "metrics_analytics.cli:app"
metrics-export = "metrics_export.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
